<resources>
    <string name="app_name">Calculator Interface 2</string>
    <string name="output_txt">0</string>
    <string name="cancel_btn">C</string>
    <string name="changeSign_btn">+/-</string>
    <string name="percent_btn">%</string>
    <string name="divide_btn">÷</string>
    <string name="seven_btn">7</string>
    <string name="eight_btn">8</string>
    <string name="nine_btn">9</string>
    <string name="multiply_btn">×</string>
    <string name="four_btn">4</string>
    <string name="five_btn">5</string>
    <string name="six_btn">6</string>
    <string name="minus_btn">-</string>
    <string name="one_btn">1</string>
    <string name="two_btn">2</string>
    <string name="three_btn">3</string>
    <string name="add_btn">+</string>
    <string name="zero_btn">0</string>
    <string name="point_btn">.</string>
    <string name="equals_btn">=</string>
</resources>
