<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/txtOutput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorOutput"
        android:gravity="end"
        android:text=""
        android:hint="@string/output_txt"
        android:textColorHint="@color/colorText"
        android:textColor="@color/colorText"
        android:textSize="40sp"
        android:padding="20dp"
        android:layout_margin="2dp"/>
    <LinearLayout
        android:id="@+id/row1"
        android:layout_below="@+id/txtOutput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="4">

        <TextView
            android:id="@+id/btnCancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:textSize="40sp"
            android:layout_margin="2dp"
            android:padding="10dp"
            android:background="@color/colorNumberCells"
            android:textColor="@color/colorOutput"
            android:text="@string/cancel_btn"
            />

        <TextView
            android:id="@+id/btnChangeSign"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:textSize="40sp"
            android:layout_margin="2dp"
            android:padding="10dp"
            android:background="@color/colorNumberCells"
            android:textColor="@color/colorOutput"
            android:text="@string/changeSign_btn"/>

        <TextView
            android:id="@+id/btnPercent"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:textSize="40sp"
            android:layout_margin="2dp"
            android:padding="10dp"
            android:background="@color/colorNumberCells"
            android:textColor="@color/colorOutput"
            android:text="@string/percent_btn"/>

        <TextView
            android:id="@+id/btnDivide"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:textSize="40sp"
            android:layout_margin="2dp"
            android:padding="10dp"
            android:background="@color/colorOperations"
            android:textColor="@color/colorOutput"
            android:text="@string/divide_btn"/>

    </LinearLayout>
    <LinearLayout
        android:id="@+id/row2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="4"
        android:layout_below="@+id/row1">

        <TextView
            android:id="@+id/btn7"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:textSize="40sp"
            android:layout_margin="2dp"
            android:padding="10dp"
            android:background="@color/colorNumberCells"
            android:textColor="@color/colorOutput"
            android:text="@string/seven_btn"
            />

        <TextView
            android:id="@+id/btn8"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:textSize="40sp"
            android:layout_margin="2dp"
            android:padding="10dp"
            android:background="@color/colorNumberCells"
            android:textColor="@color/colorOutput"
            android:text="@string/eight_btn"/>

        <TextView
            android:id="@+id/btn9"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:textSize="40sp"
            android:layout_margin="2dp"
            android:padding="10dp"
            android:background="@color/colorNumberCells"
            android:textColor="@color/colorOutput"
            android:text="@string/nine_btn"/>

        <TextView
            android:id="@+id/btnMultiply"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:textSize="40sp"
            android:layout_margin="2dp"
            android:padding="10dp"
            android:background="@color/colorOperations"
            android:textColor="@color/colorOutput"
            android:text="@string/multiply_btn" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/row3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="4"
        android:layout_below="@+id/row2">

        <TextView
            android:id="@+id/btn4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:textSize="40sp"
            android:layout_margin="2dp"
            android:padding="10dp"
            android:background="@color/colorNumberCells"
            android:textColor="@color/colorOutput"
            android:text="@string/four_btn"
            />

        <TextView
            android:id="@+id/btn5"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:textSize="40sp"
            android:layout_margin="2dp"
            android:padding="10dp"
            android:background="@color/colorNumberCells"
            android:textColor="@color/colorOutput"
            android:text="@string/five_btn"/>

        <TextView
            android:id="@+id/btn6"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:textSize="40sp"
            android:layout_margin="2dp"
            android:padding="10dp"
            android:background="@color/colorNumberCells"
            android:textColor="@color/colorOutput"
            android:text="@string/six_btn"/>

        <TextView
            android:id="@+id/btnMinus"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:textSize="40sp"
            android:layout_margin="2dp"
            android:padding="10dp"
            android:background="@color/colorOperations"
            android:textColor="@color/colorOutput"
            android:text="@string/minus_btn"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/row4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="4"
        android:layout_below="@+id/row3">

        <TextView
            android:id="@+id/btn1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:textSize="40sp"
            android:layout_margin="2dp"
            android:padding="10dp"
            android:background="@color/colorNumberCells"
            android:textColor="@color/colorOutput"
            android:text="@string/one_btn"
            />

        <TextView
            android:id="@+id/btn2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:textSize="40sp"
            android:layout_margin="2dp"
            android:padding="10dp"
            android:background="@color/colorNumberCells"
            android:textColor="@color/colorOutput"
            android:text="@string/two_btn"/>

        <TextView
            android:id="@+id/btn3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:textSize="40sp"
            android:layout_margin="2dp"
            android:padding="10dp"
            android:background="@color/colorNumberCells"
            android:textColor="@color/colorOutput"
            android:text="@string/three_btn"/>

        <TextView
            android:id="@+id/btnAdd"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:textSize="40sp"
            android:layout_margin="2dp"
            android:padding="10dp"
            android:background="@color/colorOperations"
            android:textColor="@color/colorOutput"
            android:text="@string/add_btn"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/row5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="4"
        android:layout_below="@+id/row4">

        <TextView
            android:id="@+id/btn0"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:gravity="center"
            android:textSize="40sp"
            android:layout_margin="2dp"
            android:padding="10dp"
            android:background="@color/colorNumberCells"
            android:textColor="@color/colorOutput"
            android:text="@string/zero_btn"
            />

        <TextView
            android:id="@+id/btnPoint"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:textSize="40sp"
            android:layout_margin="2dp"
            android:padding="10dp"
            android:background="@color/colorNumberCells"
            android:textColor="@color/colorOutput"
            android:text="@string/point_btn"/>

        <TextView
            android:id="@+id/btnEquals"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:textSize="40sp"
            android:layout_margin="2dp"
            android:padding="10dp"
            android:background="@color/colorOperations"
            android:textColor="@color/colorOutput"
            android:text="@string/equals_btn"/>
    </LinearLayout>

</RelativeLayout>
